[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Cube.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 133.333, 133.333 )

[node name="Player" type="Sprite"]
modulate = Color( 0.117647, 0.501961, 1, 1 )
scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
shape = SubResource( 1 )
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
